tests/error/comptime/pointer_arithmetic09.bz
// error: invalid pointer arithmetic operation with type '*int32' and offset 2
// note: while evaluating expression at compile time
// note: address points to the element at index 0 in this allocation of size 1
// note: allocation was made while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		const p = __builtin_comptime_malloc(int32, 1);
		defer __builtin_comptime_free(p);
		p + 2;
	});
}
